@@ -1,2 +1,2 @@
-__version__ = '0.0.7'
+__version__ = '0.0.8'
 
